--- a/docker-project/jenkinsfile
+++ b/docker-project/jenkinsfile
@@ -9,7 +9,7 @@ pipeline{
             }
         stage('docker image build'){
             steps{
-                sh "docker build -t new_image ."
+                sh "docker build -t new_image docker-project/."
             }
         }
         stage('docker tag'){
