--- a/docker-project/jenkinsfile
+++ b/docker-project/jenkinsfile
@@ -14,7 +14,7 @@ pipeline{
         }
         stage('docker tag'){
             steps{
-                sh "docker tag docker_image itsolidev.jfrog.io/artifactory/itsol-docker-develop-local/docker_image"
+                sh "docker tag docker_image itsol-docker-develop-local/docker_image"
             }
         }
         stage('login into jfrog artifactory'){
